# yuv-manipulations-2

./: .gitignore  CMakeLists.txt  README.md
images/: chef-with-trumpet-DCT-50.myyuv  chef-with-trumpet-DCT-90.myyuv  chef-with-trumpet-big-DCT-50.myyuv  chef-with-trumpet.myyuv
myyuv_cli/: CMakeLists.txt  main.cpp
myyuv_lib/: CMakeLists.txt  myyuv.hpp  myyuv_bmp.cpp  myyuv_bmp.hpp  myyuv_yuv.cpp  myyuv_yuv.hpp
myyuv_lib/myyuv_DCT/: DCT.cpp  DCT.hpp  Huffman.cpp  Huffman.hpp
myyuv_opengl/: CMakeLists.txt
myyuv_opengl/shared/: CMakeLists.txt  myyuv_opengl_shared.cpp  myyuv_opengl_shared.hpp
myyuv_opengl/spinning_cube/: CMakeLists.txt  main.cpp  spinning_cube.cpp  spinning_cube.hpp  spinning_cube_bmp.cpp  spinning_cube_yuv.cpp  vert.glsl
myyuv_opengl/viewer/: CMakeLists.txt  frag_bmp.glsl  frag_yuv.glsl  main.cpp  vert.glsl  viewer.cpp  viewer.hpp  viewer_bmp.cpp  viewer_yuv.cpp
myyuv_sdl3/: CMakeLists.txt  main.cpp
